[package]
name = "sdl2_mac_ogg"
version = "0.1.0"
authors = ["booyaa <booyaabooyaabooyaa@gmail.com>"]

[dependencies]
# sdl2 v0.28 works
sdl2 = { version = "0.29", default-features = false, features = ["image", "mixer"] }
# as does v.31 (current)
# sdl2 = { version = "0.31", default-features = false, features = ["mixer"] }
gate = "0.2.1"

[build-dependencies]
gate_build = "0.2.1"